# anime-recommendation-app

./: data-exploration.ipynb  main.py  pyproject.toml
