[project]
name = "anime-recommendation-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.14.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=1.0.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "transformers>=5.8.0",
]
